instantiated onOptionsItemSelected method. corrected syntax error in sqlite database

--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -103,7 +103,7 @@
         </LinearLayout>
     </LinearLayout>
 
-    <!-- Number of Times category -->
+    <!-- Number_of_Times category -->
     <LinearLayout
         android:id="@+id/container_no_of_times"
         android:layout_width="match_parent"
@@ -122,38 +122,9 @@
             android:layout_weight="2"
             android:orientation="vertical">
 
-            <!-- Number of Times drop-down spinner -->
+            <!-- Number_of_Times drop-down spinner -->
             <Spinner
                 android:id="@+id/spinner_no_of_times"
-                android:layout_height="48dp"
-                android:layout_width="wrap_content"
-                android:paddingRight="16dp"
-                android:spinnerMode="dropdown"/>
-        </LinearLayout>
-    </LinearLayout>
-
-    <!-- Time of Day category -->
-    <LinearLayout
-        android:id="@+id/container_time_of_day"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <!-- Label -->
-        <TextView
-            android:text="Time of Day"
-            style="@style/CategoryStyle" />
-
-        <!-- Input field -->
-        <LinearLayout
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:orientation="vertical">
-
-            <!-- Daytime drop-down spinner -->
-            <Spinner
-                android:id="@+id/spinner_time_of_day"
                 android:layout_height="48dp"
                 android:layout_width="wrap_content"
                 android:paddingRight="16dp"
